# AlAqsaHRM

./: .env.example  .env.render  .gitignore  .nixpacks.toml  .replit  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOKPLOY.md  Dockerfile  LOGIN_FIX.md  README.md  README.txt  app.py  app_auth_routes.py  app_config.py  app_error_routes.py  app_init.py  app_main.py  auth.py  build_exe.py  check_tables.py  cli.py  convert_icons.py  direct_import.py  employee_data.db  employee_importer.py  export_utils.py  fix_login.py  import_company_data.py  import_employees.py  import_excel.py  import_utils.py  imported_employees.json  init_database.py  manage.py  minimal_import.py  models.py  package-lock.json  package.json  pyproject.toml  (+5 more)
attached_assets/: Cleaned_Company_Book_Keeping_April_2025.xlsx  EmployeeDetails.xlsx  HRM Final prompt.txt  HRM login-signup.txt  Pasted--I-m-deploying-a-Flask-app-to-Render-com-but-default-login-credentials-aren-t-working-Based-on-thes-1746995578930.txt  Pasted-2025-05-10T18-54-20-339113597Z-152-5-152-5-kB-28-3-MB-s--1746904824615.txt  Pasted-2025-05-10T19-29-41-445543659Z-rv-self-handle-user-exception-e-2025-05-10T19-29-41-445546319-1746905943799.txt  Pasted-ChatGPT-said-Excellent-Since-everything-is-now-working-and-visible-and-you-re-ready-to-finalize--1746891839503.txt  Pasted-Create-a-complete-login-logout-and-sign-up-system-with-role-based-access-Use-SQLite-for-the-backe-1744919024947.txt  Pasted-Fix-Login-System-Local-Production-Objective-Debug-and-fix-the-login-system-that-fails-both-lo-1747000197574.txt  Please fix this dokploy deploy errors.txt  (+6 more)
(+158 files in other folders)
